name: web-mongrel2
version: 0.0.8.1
build-type: Simple
license: BSD3
license-file: LICENSE
copyright:
maintainer: Clint Moore <cmoore@wamboli.com>
build-depends: MissingH -any, base >=4,
               bytestring -any, data-default -any, json -any, file-embed,
               parsec -any, system-uuid -any, mtl >= 2, old-time,
               zeromq-haskell == 0.4.1, HStringTemplate -any, template-haskell -any
stability:
homepage: http://github.com/cmoore/haskell-mongrel2
package-url:
bug-reports:
synopsis: Bindings for the Mongrel2 web server.
description: web-mongrel2 helps you write handlers for different frameworks.
category: Web
author: Clint Moore
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Web.Mongrel2
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src/
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall -Werror -O2 -threaded
hugs-options:
nhc98-options:
jhc-options: